style: changing images style to avoid distortion

--- a/webapp/src/main/webapp/css/global.css
+++ b/webapp/src/main/webapp/css/global.css
@@ -14,6 +14,7 @@ body {
 .img {
     height: 100%;
     width: 100%;
+    object-fit: cover;
 }
 
 .dropdown {
